re PR c++/56447 ([C++11] Lambda in template has conversion op it shouldn't have)

PR c++/56447
	PR c++/55532
	* pt.c (instantiate_class_template_1): Instantiate lambda capture
	list here.
	(tsubst_copy_and_build): Not here.

From-SVN: r196729